--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello</title>
-    <a th:href="@{/welcome.html}" class="btn btn-primary btn-sm mb-3">
-        First button
+    <a th:href="@{/list}" class="btn btn-primary btn-sm mb-3">
+        Sending
     </a>
-    <a th:href="@{/welcome.html}" class="btn btn-primary btn-sm mb-3">
-        Second button
+    <a th:href="@{/form}" class="btn btn-primary btn-sm mb-3">
+        Traveller
     </a>
 </head>
 <body>
