--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -6,17 +6,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <title>Göndər getsin</title>
 </head>
 <body>
 <div class="container d-flex h-100">
     <div class="row align-self-center w-100">
         <div class="col-4 mx-auto">
-
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg btn-block" th:href="@{/list}" role="button">Göndərirəm</a>
-                    <a class="btn btn-primary btn-lg btn-block" th:href="@{/form}" role="button">Gedirəm</a>
+                    <a class="btn btn-primary btn-lg btn-block" th:href="@{/list-of-travellers}" role="button">Göndərirəm</a>
+                    <a class="btn btn-primary btn-lg btn-block" th:href="@{/traveller-form}" role="button">Gedirəm</a>
                 </p>
-
         </div>
     </div>
 </div>
